# ROS-NMMI

./: LICENSE  README.md
nmmi_GenericFW/generic_fw/: CMakeLists.txt  package.xml
nmmi_GenericFW/generic_fw_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml
nmmi_GenericFW/generic_fw_hardware_interface/include/generic_fw_hardware_interface/: generic_fw_hardware_interface.h  generic_fw_transmission_interface.h
nmmi_GenericFW/generic_fw_hardware_interface/src/: generic_fw_hardware_interface.cpp
nmmi_IMU/imu/: package.xml
nmmi_IMU/imu_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml
nmmi_IMU/imu_hardware_interface/include/imu_hardware_interface/: imu_hardware_interface.h  imu_transmission_interface.h
nmmi_IMU/imu_hardware_interface/src/: imu_hardware_interface.cpp
nmmi_SoftHandPro/SoftHandPro/: CMakeLists.txt  package.xml
nmmi_SoftHandPro/SoftHandPro_control/: CMakeLists.txt  package.xml
nmmi_SoftHandPro/SoftHandPro_control/config/: SoftHandPro_waypoints.yaml
nmmi_SoftHandPro/SoftHandPro_control/launch/: control.launch
nmmi_SoftHandPro/SoftHandPro_description/: CMakeLists.txt  package.xml
nmmi_SoftHandPro/SoftHandPro_description/config/: default.yaml
nmmi_SoftHandPro/SoftHandPro_description/launch/: display.launch
nmmi_SoftHandPro/SoftHandPro_description/rviz/: SoftHandPro.rviz
nmmi_SoftHandPro/SoftHandPro_description/urdf/: SoftHandPro.materials.xacro  SoftHandPro.urdf.xacro  SoftHandPro.utils.xacro
nmmi_SoftHandPro/SoftHandPro_hardware_interface/: CMakeLists.txt  package.xml  plugin.xml
nmmi_SoftHandPro/SoftHandPro_hardware_interface/include/SoftHandPro_hardware_interface/: SoftHandPro_hardware_interface.h  SoftHandPro_transmission_interface.h
nmmi_SoftHandPro/SoftHandPro_hardware_interface/src/: SoftHandPro_hardware_interface.cpp
nmmi_bringup/: CMakeLists.txt  package.xml
nmmi_bringup/launch/: device_bringup.launch  device_controllers_bringup.launch  robot_bringup.launch
nmmi_driver/: CMakeLists.txt  package.xml
nmmi_driver/api/src/: cp_communications.cpp  cp_communications.h
nmmi_driver/include/nmmi_driver/: nmmi_communication_handler.h  nmmi_driver.h
nmmi_driver/launch/: communication_handler.launch
nmmi_driver/src/: main.cpp  nmmi_communication_handler.cpp
nmmi_examples/: CMakeLists.txt  LICENSE  package.xml
nmmi_examples/launch/: 2_IMU_boards_chain.launch  IMU_board_single.launch  SoftFoot_5_IMU_boards_chain.launch  SoftFoot_IMU_1_chain.launch  SoftFoot_IMU_2_chain.launch  SoftFoot_IMU_3_chain.launch  SoftFoot_IMU_4_chain.launch  SoftHandPro_IMU_chain.launch  SoftHandPro_control.launch  SoftHandPro_with_IMU_reading.launch  SoftHandPro_with_generic_features.launch  generic_board_single.launch  qbhand_IMU_chain.launch
nmmi_msgs/: CMakeLists.txt  package.xml
nmmi_msgs/include/nmmi_msgs/: nmmi_msgs.h
nmmi_msgs/msg/: ADCResourceData.msg  ADC_State.msg  EncoderResourceData.msg  Encoder_State.msg  ImuTable.msg  ResourceData.msg  State.msg  adc.msg  adcArray.msg  angles.msg  anglesArray.msg  encoder.msg  encoderArray.msg  inertialSensor.msg  inertialSensorArrayStamped.msg  quaternion.msg  temperature.msg
nmmi_srvs/: CMakeLists.txt  package.xml
nmmi_srvs/include/nmmi_srvs/: nmmi_srvs.h
nmmi_srvs/srv/: GetADCMap.srv  GetADCRawValues.srv  GetEncoderMap.srv  GetEncoderRawValues.srv  GetIMUParam.srv  GetIMUValues.srv
