<package format="2">
  <name>nmmi_bringup</name>
  <version>1.0.0</version>
  <description>
    This package contains a device-independent bringup utilities for NMMI devices.
  </description>
  <author>Centro "E. Piaggio"</author>
  <maintainer email="info@naturalmachinemotioninitiative.com">NMMI</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>