<package format="2">
  <name>nmmi_driver</name>
  <version>2.0.3</version>
  <description>
    This package contains a device-independent API wrapper for Centro Piaggio devices.
  </description>
  <author>Centro "E. Piaggio"</author>
  <maintainer email="info@naturalmachinemotioninitiative.com">NMMI</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nmmi_srvs</depend>
  <depend>qb_device_driver</depend>
  <depend>qb_device_utils</depend>

  <!--TODO: <test_depend>gtest</test_depend>-->
  <doc_depend>doxygen</doc_depend>
</package>