<package format="2">
  <name>nmmi_examples</name>
  <version>2.0.2</version>
  <description>
    This package contains the ROS example for single or multiple NMMI devices handling.
  </description>
  <author>Centro "E. Piaggio"</author>
  <maintainer email="info@naturalmachinemotioninitiative.com">NMMI</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>