<package format="2">
  <name>nmmi_msgs</name>
  <version>1.0.0</version>
  <description>
    This package contains the device-independent custom ROS messages for Centro Piaggio devices.
  </description>
  <author>Centro "E. Piaggio"</author>
  <maintainer email="info@naturalmachinemotioninitiative.com">NMMI</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>