<package format="2">
  <name>generic_fw</name>
  <version>1.0.0</version>
  <description>
    This package contains the ROS interface for additional tools uploaded only on a NMMI device with generic fw.
  </description>
  <author>Centro "E. Piaggio"</author>
  <maintainer email="info@naturalmachinemotioninitiative.com">NMMI</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>generic_fw_hardware_interface</exec_depend>
  <exec_depend>nmmi_msgs</exec_depend>
  <exec_depend>nmmi_srvs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>