<package format="2">
  <name>softhandpro_description</name>
  <version>2.1.1</version>
  <description>
    This package contains the ROS description for SoftHandPro device.
  </description>
  <author>Centro "E. Piaggio"</author>
  <maintainer email="info@naturalmachinemotioninitiative.com">NMMI</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>